@@ -10,4 +10,7 @@ ABNANL2A
 :86:/TRTP/SEPA OVERBOEKING/IBAN/FR12345678901234/BIC/GEFRADAM
 /NAME/QASD JGRED/REMI/Dit zijn de omschrijvingsregels/EREF/NOTPRO
 VIDED
+:61:1412051205RC15,67IDXXREF
+DATA
+:61:171214C15,67TIDXTEST//REFERENCE
 :62F:C120514EUR5638,62
